2003-12-17  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c (fill_menu): Adapt to the new gobject API for
	games_file_list. Removed any dependence on the internals of
	games_file_list.

2003-12-04  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c (fill_menu): Rework to use the new libgames-support API.

2003-11-27  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c: Remove old pref dialog help code that is no longer
	used. Use the shared code for finding the theme files (also strip
	the suffixes from the theme names).

2003-11-19  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (CLEANFILES): Clean up the schema files.

2003-11-07  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c (fill_menu): Patch from Kaushal Kumar to fix C89
	compilation. Bug #126338.

2003-10-29  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am: Removed *_DISABLE_DEPRECATED.

2003-10-21  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (install-data-local): Change the way gconf files are
	installed. This should improve things for people building outside
	the source tree. See bug #123192.

2003-10-19  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c: Replace deprecated functions.
	(main): Remove the explicit realize for the main board.

Wed Aug 27 15:10:24 2003  Jonathan Blandford  <jrb@redhat.com>

	* glines.c (move_timeout_changed_cb): If we compile with -ansi, we
	need to use ansi-compatible comments.
	(ball_theme_changed_cb): Ditto

2003-08-09  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c (main): More gconf defenses.

2003-08-04  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c: Defensive programming against bad gconf data.

2003-07-30  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/glines.xml: Updated for 2.4 (also updated the images).

2003-07-28  Callum McKenzie <callum@physics.otago.ac.nz>

	* classic.png: Improved the alpha blending with the